--- a/taka-portfolio/style.css
+++ b/taka-portfolio/style.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 html {
   scroll-behavior: smooth;
 }
@@ -16,7 +15,6 @@ body {
 .container {
   margin: auto;
   width: 100%;
-  height: 100vh;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -4464,7 +4462,17 @@ body {
   }
 }
 
-.projects p {
+.projects {
+  color: white;
+  width: 100%;
+}
+
+.projects-title {
+  font-size: 48px;
+  text-decoration: none;
+}
+
+.projects a {
   color: white;
 }
 
@@ -4476,34 +4484,36 @@ body {
   color: #fff;
 }
 
-.pink {
-  background: -webkit-gradient(linear, left top, right top, from(#c0ffd5), to(blue));
-  background: linear-gradient(to right, #c0ffd5, blue);
+.moveIcons2 {
+  position: absolute;
+  top: 10px;
+  left: 0px;
+  font-size: 22px;
+  color: #00020e;
 }
 
-.orange {
-  background: -webkit-gradient(linear, left top, right top, from(#ffb326), to(yellow));
-  background: linear-gradient(to right, #ffb326, yellow);
+.gradation1 {
+  background: -webkit-gradient(linear, left top, right top, from(#ffff00), to(#00FF00));
+  background: linear-gradient(to right, #ffff00, #00FF00);
 }
 
-.yellow {
-  background: -webkit-gradient(linear, left top, right top, from(yellow), to(blue));
-  background: linear-gradient(to right, yellow, blue);
+.gradation2 {
+  background: -webkit-gradient(linear, left top, right top, from(#00FF00), to(#ffff00));
+  background: linear-gradient(to right, #00FF00, #ffff00);
 }
 
-.blue {
-  background: -webkit-gradient(linear, left top, right top, from(blue), to(purple));
-  background: linear-gradient(to right, blue, purple);
+.gradation3 {
+  background: -webkit-gradient(linear, left top, right top, from(#0000ff), to(#ff00ff));
+  background: linear-gradient(to right, #0000ff, #ff00ff);
 }
 
-.purple {
-  background: -webkit-gradient(linear, left top, right top, from(purple), to(green));
-  background: linear-gradient(to right, purple, green);
+.gradation4 {
+  background: -webkit-gradient(linear, left top, right top, from(#ff00ff), to(#0000ff));
+  background: linear-gradient(to right, #ff00ff, #0000ff);
 }
 
-.green {
-  background: -webkit-gradient(linear, left top, right top, from(green), to(blue));
-  background: linear-gradient(to right, green, blue);
+.mt-box {
+  margin-top: 72px;
 }
 
 .video-container {
@@ -4523,140 +4533,5 @@ body {
 
 * {
   text-align: center;
-}
-
-.animateme {
-  padding: 100px;
-  width: 10em;
-  margin: 0 auto;
-  background: #97c2aa;
-}
-
-#interval {
-  position: fixed;
-  top: 0;
-  right: 0;
-}
-
-#wrap {
-  position: relative;
-  height: 500px;
-}
-
-.object span {
-  z-index: 10;
-  position: absolute;
-  -webkit-transition: all 10s ease;
-  transition: all 10s ease;
-}
-
-.possecond {
-  top: 24px;
-  left: 1000px;
-}
-
-.pos0 {
-  top: 0px;
-  left: 0px;
-}
-
-.pos1 {
-  top: 500px;
-  left: 200px;
-}
-
-.pos2 {
-  top: 1000px;
-  left: 400px;
-}
-
-.pos3 {
-  top: 1500px;
-  left: 900px;
-}
-
-.border1,
-.border2,
-.border3 {
-  border-top: 1px #ccc solid;
-  position: absolute;
-  width: 100%;
-}
-
-.border1 {
-  z-index: 1;
-  top: 500px;
-}
-
-.border2 {
-  z-index: 2;
-  top: 1000px;
-}
-
-.border3 {
-  z-index: 3;
-  top: 1500px;
-}
-
-/* スイングアニメーション */
-.object span {
-  -webkit-transform-origin: top center;
-  transform-origin: top center;
-  -webkit-animation-name: swing;
-  animation-name: swing;
-  -webkit-animation-duration: 2s;
-  animation-duration: 2s;
-  -webkit-animation-fill-mode: both;
-  animation-fill-mode: both;
-  animation-iteration-count: infinite;
-  -webkit-animation-iteration-count: infinite;
-}
-
-@-webkit-keyframes swing {
-  20%,
-  40%,
-  60%,
-  80%,
-  100% {
-    -webkit-transform-origin: top center;
-  }
-  20% {
-    -webkit-transform: rotate(15deg);
-  }
-  40% {
-    -webkit-transform: rotate(-10deg);
-  }
-  60% {
-    -webkit-transform: rotate(5deg);
-  }
-  80% {
-    -webkit-transform: rotate(-5deg);
-  }
-  100% {
-    -webkit-transform: rotate(0deg);
-  }
-}
-
-@keyframes swing {
-  20% {
-    -webkit-transform: rotate(15deg);
-            transform: rotate(15deg);
-  }
-  40% {
-    -webkit-transform: rotate(-10deg);
-            transform: rotate(-10deg);
-  }
-  60% {
-    -webkit-transform: rotate(5deg);
-            transform: rotate(5deg);
-  }
-  80% {
-    -webkit-transform: rotate(-5deg);
-            transform: rotate(-5deg);
-  }
-  100% {
-    -webkit-transform: rotate(0deg);
-            transform: rotate(0deg);
-  }
 }
 /*# sourceMappingURL=style.css.map */
