--- a/taka-portfolio/style.scss
+++ b/taka-portfolio/style.scss
@@ -13,7 +13,6 @@ body {
 .container {
   margin: auto;
   width: 100%;
-  height: 100vh;
   display: flex;
 }
 
@@ -29,6 +28,7 @@ body {
   height: 200px;
   position: relative;
 }
+
 .line {
   position: relative;
   z-index: 100;
@@ -74,9 +74,18 @@ body {
     transform: translateY(0%);
   }
 }
-.projects p{
+.projects{
   color: white;
+  width: 100%;
+  &-title{
+    font-size: 48px;
+    text-decoration: none;
+  }
+  a {
+    color: white;
+  }
 }
+
 
 .moveIcons {
   position: absolute;
@@ -85,30 +94,33 @@ body {
   font-size: 22px;
   color: #fff;
 }
-
-.pink {
-  background: linear-gradient(to right, rgb(192, 255, 213), blue);
+.moveIcons2 {
+  position: absolute;
+  top: 10px;
+  left: 0px;
+  font-size: 22px;
+  color: #00020e;
 }
 
-.orange {
-  background: linear-gradient(to right, rgb(255, 179, 38), yellow);
+.gradation1 {
+  background: linear-gradient(to right, #ffff00, #00FF00);
 }
 
-.yellow {
-  background: linear-gradient(to right, yellow, blue);
+.gradation2 {
+  background: linear-gradient(to right, #00FF00, #ffff00);
 }
 
-.blue {
-  background: linear-gradient(to right, blue, purple);
-}
-.purple {
-  background: linear-gradient(to right, purple, green);
+.gradation3 {
+  background: linear-gradient(to right, #0000ff, #ff00ff);
 }
 
-.green {
-  background: linear-gradient(to right, green, blue);
+.gradation4 {
+  background: linear-gradient(to right, #ff00ff, #0000ff);
 }
 
+.mt-box{
+  margin-top: 72px;
+}
 .video-container {
   position: relative;
   overflow-x: hidden;
@@ -126,117 +138,4 @@ body {
 * {
   text-align: center;
 }
-.animateme {
-  padding: 100px;
-  width: 10em;
-  margin: 0 auto;
-  background: #97c2aa;
-}
 
-#interval {
-  position: fixed;
-  top: 0;
-  right: 0;
-}
-#wrap {
-  position: relative;
-  height: 500px;
-}
-.object span {
-  z-index: 10;
-  position: absolute;
-  transition: all 10s ease;
-}
-.possecond {
-  top: 24px;
-  left: 1000px;
-}
-.pos0 {
-  top: 0px;
-  left: 0px;
-}
-.pos1 {
-  top: 500px;
-  left: 200px;
-}
-.pos2 {
-  top: 1000px;
-  left: 400px;
-}
-.pos3 {
-  top: 1500px;
-  left: 900px;
-}
-.border1,
-.border2,
-.border3 {
-  border-top: 1px #ccc solid;
-  position: absolute;
-  width: 100%;
-}
-.border1 {
-  z-index: 1;
-  top: 500px;
-}
-.border2 {
-  z-index: 2;
-  top: 1000px;
-}
-.border3 {
-  z-index: 3;
-  top: 1500px;
-}
-/* スイングアニメーション */
-.object span {
-  -webkit-transform-origin: top center;
-  transform-origin: top center;
-  -webkit-animation-name: swing;
-  animation-name: swing;
-  -webkit-animation-duration: 2s;
-  animation-duration: 2s;
-  -webkit-animation-fill-mode: both;
-  animation-fill-mode: both;
-  animation-iteration-count: infinite;
-  -webkit-animation-iteration-count: infinite;
-}
-@-webkit-keyframes swing {
-  20%,
-  40%,
-  60%,
-  80%,
-  100% {
-    -webkit-transform-origin: top center;
-  }
-  20% {
-    -webkit-transform: rotate(15deg);
-  }
-  40% {
-    -webkit-transform: rotate(-10deg);
-  }
-  60% {
-    -webkit-transform: rotate(5deg);
-  }
-  80% {
-    -webkit-transform: rotate(-5deg);
-  }
-  100% {
-    -webkit-transform: rotate(0deg);
-  }
-}
-@keyframes swing {
-  20% {
-    transform: rotate(15deg);
-  }
-  40% {
-    transform: rotate(-10deg);
-  }
-  60% {
-    transform: rotate(5deg);
-  }
-  80% {
-    transform: rotate(-5deg);
-  }
-  100% {
-    transform: rotate(0deg);
-  }
-}
