--- a/taka-portfolio/style.css
+++ b/taka-portfolio/style.css
@@ -4476,6 +4476,11 @@ body {
   color: white;
 }
 
+.logo {
+  width: 80px;
+  height: 80px;
+}
+
 .moveIcons {
   position: absolute;
   top: 10px;
