--- a/taka-portfolio/style.css
+++ b/taka-portfolio/style.css
@@ -1,11 +1,20 @@
 html {
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 body {
   font-family: "Roboto", sans-serif;
   margin: 0;
   background-color: #00020e;
+  overflow-x: hidden;
+}
+
+img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .skills {
