--- a/taka-portfolio/style.scss
+++ b/taka-portfolio/style.scss
@@ -1,10 +1,18 @@
 html {
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 body {
   font-family: "Roboto", sans-serif;
   margin: 0;
   background-color: #00020e;
+  overflow-x: hidden;
+}
+
+img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 .skills {
   opacity: 0;
