--- a/taka-portfolio/style.scss
+++ b/taka-portfolio/style.scss
@@ -1,3 +1,23 @@
+$pc: 1024px; 
+$tab: 680px;
+$sp: 480px;
+
+@mixin pc {
+  @media (max-width: ($pc)) {
+    @content;
+  }
+}
+@mixin tab {
+  @media (max-width: ($tab)) {
+    @content;
+  }
+}
+@mixin sp {
+  @media (max-width: ($sp)) {
+    @content;
+  }
+}
+
 html {
   scroll-behavior: smooth;
   overflow-x: hidden;
@@ -155,6 +175,9 @@ img {
     padding: 1.5rem 0.5rem;
     color: #fff;
     margin: 24px 0px;
+    @include sp {
+      font-size: 2rem;
+    };
     &:after {
       position: absolute;
       bottom: 0;
